--- a/retro-files/dashboard.html
+++ b/retro-files/dashboard.html
@@ -10,3 +10,4 @@ Opportunities don't happen. You create them. DNS Routing Agile Serverless Virtua
 Stay hungry, stay foolish. To be the best, you must be able to handle the worst. Success usually comes to those who are too busy to be looking for it. Data Pipeline Algorithm CI/CD Deployment Content Delivery Network Neural Networks Python Dream big and dare to fail. Happiness is not something ready made. It comes from your own actions. Agile API
 Code Review Blockchain Automation Data Science Virtual Machines Cloud Functions Difficult roads often lead to beautiful destinations.
 Multi-threading Replica Set API Work hard in silence, let your success be your noise. Virtual Machines NLP
+Agile Do what you love and the money will follow. Code Review Sharding Serverless The only way to do great work is to love what you do. Message Queue
