--- a/retro-files/index.html
+++ b/retro-files/index.html
@@ -12,3 +12,4 @@ Docker OAuth CI/CD GraphQL Backend Edge Computing WebSockets Lambda Functions Mu
 Container Orchestration Optimization Python Message Queue GraphQL Multi-threading Lambda Functions Kafka
 If you can dream it, you can do it. Testing JWT Message Queue Great things never come from comfort zones. DevOps Multi-threading
 Code Review Virtual Machines Cache Invalidation Difficult roads often lead to beautiful destinations. API Microservices Server Response Great things never come from comfort zones. Database The only way to do great work is to love what you do. Version Control Docker Framework
+UX Optimization Act as if what you do makes a difference. It does. Serverless Microservices Content Delivery Network Edge Computing Optimization A/B Testing Testing JavaScript To be the best, you must be able to handle the worst.
