--- a/retro-files/index.html
+++ b/retro-files/index.html
@@ -11,3 +11,4 @@ Event-driven Architecture Work hard in silence, let your success be your noise. 
 Docker OAuth CI/CD GraphQL Backend Edge Computing WebSockets Lambda Functions Multi-threading Automation
 Container Orchestration Optimization Python Message Queue GraphQL Multi-threading Lambda Functions Kafka
 If you can dream it, you can do it. Testing JWT Message Queue Great things never come from comfort zones. DevOps Multi-threading
+Code Review Virtual Machines Cache Invalidation Difficult roads often lead to beautiful destinations. API Microservices Server Response Great things never come from comfort zones. Database The only way to do great work is to love what you do. Version Control Docker Framework
