--- a/retro-files/index.html
+++ b/retro-files/index.html
@@ -9,3 +9,4 @@ Blockchain Pull Request Monitoring JavaScript Scalability Content Delivery Netwo
 Backend Simplicity is the ultimate sophistication. Happiness is not something ready made. It comes from your own actions. DNS Routing Success doesn’t just find you. You have to go out and get it.
 Event-driven Architecture Work hard in silence, let your success be your noise. Difficult roads often lead to beautiful destinations. Automation Zero Downtime Deployment Sharding Data Science
 Docker OAuth CI/CD GraphQL Backend Edge Computing WebSockets Lambda Functions Multi-threading Automation
+Container Orchestration Optimization Python Message Queue GraphQL Multi-threading Lambda Functions Kafka
