--- a/retro-files/dashboard.html
+++ b/retro-files/dashboard.html
@@ -5,3 +5,4 @@ Artificial Intelligence WebSockets Data Science Kafka To be the best, you must b
 UX Optimization Quantum Computing Edge Computing A/B Testing Sharding Artificial Intelligence
 Event Sourcing Microservices React Great things never come from comfort zones. Multi-threading GraphQL Cloud Agile Security
 Serverless Big Data Stay hungry, stay foolish. Distributed Systems Success is how high you bounce when you hit bottom. Data Pipeline To be the best, you must be able to handle the worst. Don't be afraid to give up the good to go for the great. Docker
+Sharding WebSockets Big Data Event-driven Architecture Success is how high you bounce when you hit bottom. Multi-threading Testing Container Orchestration Content Delivery Network Database Indexing Logging Predictive Analytics To be the best, you must be able to handle the worst. Do what you love and the money will follow. Containerization
