--- a/retro-files/dashboard.html
+++ b/retro-files/dashboard.html
@@ -4,3 +4,4 @@ Serverless React Don't be afraid to give up the good to go for the great. Messag
 Artificial Intelligence WebSockets Data Science Kafka To be the best, you must be able to handle the worst. Event-driven Architecture CI/CD Success doesn’t just find you. You have to go out and get it. Happiness is not something ready made. It comes from your own actions. Latency Optimization Testing
 UX Optimization Quantum Computing Edge Computing A/B Testing Sharding Artificial Intelligence
 Event Sourcing Microservices React Great things never come from comfort zones. Multi-threading GraphQL Cloud Agile Security
+Serverless Big Data Stay hungry, stay foolish. Distributed Systems Success is how high you bounce when you hit bottom. Data Pipeline To be the best, you must be able to handle the worst. Don't be afraid to give up the good to go for the great. Docker
