--- a/retro-files/index.html
+++ b/retro-files/index.html
@@ -8,3 +8,4 @@ Act as if what you do makes a difference. It does. Happiness is not something re
 Blockchain Pull Request Monitoring JavaScript Scalability Content Delivery Network Testing Logging Load Testing API Optimization
 Backend Simplicity is the ultimate sophistication. Happiness is not something ready made. It comes from your own actions. DNS Routing Success doesn’t just find you. You have to go out and get it.
 Event-driven Architecture Work hard in silence, let your success be your noise. Difficult roads often lead to beautiful destinations. Automation Zero Downtime Deployment Sharding Data Science
+Docker OAuth CI/CD GraphQL Backend Edge Computing WebSockets Lambda Functions Multi-threading Automation
