--- a/retro-files/dashboard.html
+++ b/retro-files/dashboard.html
@@ -3,3 +3,4 @@ JavaScript Load Testing Content Delivery Network Python Machine Learning CI/CD E
 Serverless React Don't be afraid to give up the good to go for the great. Message Queue Event-driven Architecture
 Artificial Intelligence WebSockets Data Science Kafka To be the best, you must be able to handle the worst. Event-driven Architecture CI/CD Success doesn’t just find you. You have to go out and get it. Happiness is not something ready made. It comes from your own actions. Latency Optimization Testing
 UX Optimization Quantum Computing Edge Computing A/B Testing Sharding Artificial Intelligence
+Event Sourcing Microservices React Great things never come from comfort zones. Multi-threading GraphQL Cloud Agile Security
