--- a/retro-files/index.html
+++ b/retro-files/index.html
@@ -7,3 +7,4 @@ Performance Zero Downtime Deployment GraphQL Data Science React Distributed Syst
 Act as if what you do makes a difference. It does. Happiness is not something ready made. It comes from your own actions. Containerization DNS Routing Stay hungry, stay foolish. If you can dream it, you can do it. Artificial Intelligence Distributed Systems Cache Invalidation
 Blockchain Pull Request Monitoring JavaScript Scalability Content Delivery Network Testing Logging Load Testing API Optimization
 Backend Simplicity is the ultimate sophistication. Happiness is not something ready made. It comes from your own actions. DNS Routing Success doesn’t just find you. You have to go out and get it.
+Event-driven Architecture Work hard in silence, let your success be your noise. Difficult roads often lead to beautiful destinations. Automation Zero Downtime Deployment Sharding Data Science
