--- a/retro-files/index.html
+++ b/retro-files/index.html
@@ -6,3 +6,4 @@ Message Queue Algorithm Agile Don't be afraid to give up the good to go for the 
 Performance Zero Downtime Deployment GraphQL Data Science React Distributed Systems If you can dream it, you can do it. Database Indexing JavaScript The only way to do great work is to love what you do. Optimization
 Act as if what you do makes a difference. It does. Happiness is not something ready made. It comes from your own actions. Containerization DNS Routing Stay hungry, stay foolish. If you can dream it, you can do it. Artificial Intelligence Distributed Systems Cache Invalidation
 Blockchain Pull Request Monitoring JavaScript Scalability Content Delivery Network Testing Logging Load Testing API Optimization
+Backend Simplicity is the ultimate sophistication. Happiness is not something ready made. It comes from your own actions. DNS Routing Success doesn’t just find you. You have to go out and get it.
