--- a/retro-files/dashboard.html
+++ b/retro-files/dashboard.html
@@ -1,3 +1,4 @@
 Database Microservices Difficult roads often lead to beautiful destinations. Server Response RabbitMQ Framework Multi-threading Algorithm Lambda Functions A/B Testing
 JavaScript Load Testing Content Delivery Network Python Machine Learning CI/CD Event-driven Architecture Neural Networks Opportunities don't happen. You create them. Data Science
 Serverless React Don't be afraid to give up the good to go for the great. Message Queue Event-driven Architecture
+Artificial Intelligence WebSockets Data Science Kafka To be the best, you must be able to handle the worst. Event-driven Architecture CI/CD Success doesn’t just find you. You have to go out and get it. Happiness is not something ready made. It comes from your own actions. Latency Optimization Testing
