--- a/retro-files/dashboard.html
+++ b/retro-files/dashboard.html
@@ -1,2 +1,3 @@
 Database Microservices Difficult roads often lead to beautiful destinations. Server Response RabbitMQ Framework Multi-threading Algorithm Lambda Functions A/B Testing
 JavaScript Load Testing Content Delivery Network Python Machine Learning CI/CD Event-driven Architecture Neural Networks Opportunities don't happen. You create them. Data Science
+Serverless React Don't be afraid to give up the good to go for the great. Message Queue Event-driven Architecture
