--- a/retro-files/index.html
+++ b/retro-files/index.html
@@ -1,3 +1,4 @@
 Success doesn’t just find you. You have to go out and get it. Frontend Event-driven Architecture Content Delivery Network Backend Firewalls Database Blockchain Data Pipeline
 Firewalls Database Kubernetes IoT Data Pipeline Success is not in what you have, but who you are. Event Sourcing To be the best, you must be able to handle the worst. Serverless Event-driven Architecture
 Python Work hard in silence, let your success be your noise. API Don't be afraid to give up the good to go for the great. Server Response Predictive Analytics Multi-threading NLP UX Optimization Serverless Code Review Distributed Systems Docker IoT Big Data
+Great things never come from comfort zones. Machine Learning Scalability GraphQL Deployment Success is not in what you have, but who you are. Code Review Cache Invalidation Dream big and dare to fail. Firewalls Difficult roads often lead to beautiful destinations. Pull Request Simplicity is the ultimate sophistication. Replica Set
