--- a/retro-files/index.html
+++ b/retro-files/index.html
@@ -1,2 +1,3 @@
 Success doesn’t just find you. You have to go out and get it. Frontend Event-driven Architecture Content Delivery Network Backend Firewalls Database Blockchain Data Pipeline
 Firewalls Database Kubernetes IoT Data Pipeline Success is not in what you have, but who you are. Event Sourcing To be the best, you must be able to handle the worst. Serverless Event-driven Architecture
+Python Work hard in silence, let your success be your noise. API Don't be afraid to give up the good to go for the great. Server Response Predictive Analytics Multi-threading NLP UX Optimization Serverless Code Review Distributed Systems Docker IoT Big Data
