--- a/retro-files/index.html
+++ b/retro-files/index.html
@@ -1,1 +1,2 @@
 Success doesn’t just find you. You have to go out and get it. Frontend Event-driven Architecture Content Delivery Network Backend Firewalls Database Blockchain Data Pipeline
+Firewalls Database Kubernetes IoT Data Pipeline Success is not in what you have, but who you are. Event Sourcing To be the best, you must be able to handle the worst. Serverless Event-driven Architecture
